day-01-why-kubernetes-is-more-than-orchestration/examples/readiness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-demo
  namespace: production

spec:
  containers:
  - name: readiness-demo
    image: nginx:1.27

    ports:
    - containerPort: 80

    readinessProbe:
      httpGet:
        path: /
        port: 80

      initialDelaySeconds: 5
      periodSeconds: 10
      timeoutSeconds: 2
      failureThreshold: 3
