day-01-why-kubernetes-is-more-than-orchestration/examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: production

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
