day-01-why-kubernetes-is-more-than-orchestration/examples/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: production

spec:
  parentRefs:
  - name: external-gateway
    namespace: gateway-system

  hostnames:
  - app.example.com

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: frontend-service
      port: 80
